--- a/lexiflux/templates/base_htmx.html
+++ b/lexiflux/templates/base_htmx.html
@@ -55,12 +55,8 @@
         });
 
         htmx.on("htmx:afterRequest", function(evt) {
-            // For Book Edit modal form or Delete button remove backdrop and refresh books list
+            // For Book Edit modal submit and on Delete button refresh books list if exists
             if (evt.target.matches('#editBookModal form, #deleteConfirmModal button[hx-delete]') && evt.detail.successful) {
-                // Clean up modal and backdrop
-                document.querySelectorAll('.modal-backdrop').forEach(el => el.remove());
-                document.body.classList.remove('modal-open');
-
                 // Refresh books list if it exists
                 const booksList = document.getElementById('booksList');
                 if (booksList) {
