--- a/lexiflux/templates/partials/book_modal.html
+++ b/lexiflux/templates/partials/book_modal.html
@@ -19,8 +19,9 @@
       </div>
 
       <form hx-post="{% url 'edit_book_modal' book.id %}"
-            hx-target="closest .modal"
-            hx-swap="outerHTML">
+            hx-target="body"
+            hx-swap="none"
+      >
         <div class="modal-body">
           {% if error_message %}
           <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -39,24 +40,24 @@
                    required>
           </div>
 
-<div class="mb-3">
-    <label for="bookAuthor" class="form-label">Author</label>
-    <input type="text"
-           class="form-control {% if error_message and not book.author.name %}is-invalid{% endif %}"
-           id="bookAuthor"
-           name="author"
-           value="{{ book.author.name }}"
-           hx-get="{% url 'search_authors' %}"
-           hx-trigger="input delay:300ms"
-           hx-target="next .author-suggestions .suggestions-content"
-           hx-swap="innerHTML"
-           required>
-    <div class="author-suggestions list-group mt-2">
-        <div class="suggestions-content">
-            <!-- Author suggestions will be populated here -->
-        </div>
-    </div>
-</div>
+          <div class="mb-3">
+              <label for="bookAuthor" class="form-label">Author</label>
+              <input type="text"
+                     class="form-control {% if error_message and not book.author.name %}is-invalid{% endif %}"
+                     id="bookAuthor"
+                     name="author"
+                     value="{{ book.author.name }}"
+                     hx-get="{% url 'search_authors' %}"
+                     hx-trigger="input delay:300ms"
+                     hx-target="next .author-suggestions .suggestions-content"
+                     hx-swap="innerHTML"
+                     required>
+              <div class="author-suggestions list-group mt-2">
+                  <div class="suggestions-content">
+                      <!-- Author suggestions will be populated here -->
+                  </div>
+              </div>
+          </div>
 
           <div class="mb-3">
             <label for="bookLanguage" class="form-label">Language</label>
@@ -82,7 +83,6 @@
                     hx-target="body"
                     hx-swap="none"
                     data-bs-dismiss="modal"
-                    hx-on::after-request="remove #editBookModal"
                   {% endif %}
           >
             <i class="bi bi-trash"></i>
@@ -91,7 +91,7 @@
             {% if not is_new %}
             <button type="button" class="btn btn-outline-secondary me-2" data-bs-dismiss="modal">Close</button>
             {% endif %}
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">
               <i class="bi bi-check-lg me-1"></i>Save
             </button>
           </div>
@@ -127,14 +127,6 @@
                 hx-target="body"
                 hx-swap="none"
                 data-bs-dismiss="modal"
-                hx-on::after-request="
-                  const editModal = document.getElementById('editBookModal');
-                  if (editModal) {
-                      const bsModal = bootstrap.Modal.getInstance(editModal);
-                      if (bsModal) bsModal.hide();
-                      editModal.remove();
-                  }
-"
         >
           Delete
         </button>
