--- a/lexiflux/templates/partials/search_modal.html
+++ b/lexiflux/templates/partials/search_modal.html
@@ -1,4 +1,9 @@
-<div id="searchModal" class="modal fade" aria-hidden="true" aria-labelledby="searchModalLabel" role="dialog">
+<div id="searchModal"
+     class="modal fade"
+     aria-hidden="true"
+     aria-labelledby="searchModalLabel"
+     role="dialog"
+     data-bs-focus="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,21 +19,16 @@
                      name="searchInput"
                      class="form-control"
                      placeholder="Enter search term"
+                     autofocus
                      hx-post="{% url 'search' %}"
-                     hx-trigger="keyup changed delay:500ms, search"
+                     hx-trigger="keyup[target.value.length >= 3] changed delay:500ms, search"
                      hx-target="#searchResults"/>
           </div>
           <div id="searchResults" class="mt-3">
             <!-- Search results will be loaded here -->
           </div>
-          <div class="modal-footer">
-            <button type="button"
-                    class="btn btn-primary"
-                    hx-post="{% url 'search' %}"
-                    hx-trigger="click"
-                    hx-target="#searchResults">
-              Search
-            </button>
+          <div class="modal-footer border-0">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </form>
       </div>
