--- a/lexiflux/templates/partials/search_modal.html
+++ b/lexiflux/templates/partials/search_modal.html
@@ -4,13 +4,13 @@
      aria-labelledby="searchModalLabel"
      role="dialog"
      data-bs-focus="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 id="searchModalLabel" class="modal-title">Search</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" style="max-height: 70vh; overflow-y: auto;">
         <form>
           <input type="hidden" name="book-code" value="{{ book.code }}"/>
           <div class="mb-3">
@@ -26,9 +26,9 @@
                      hx-include="#whole-words"/>
           </div>
           <div class="form-check mb-3">
-              <input type="checkbox" 
-                     class="form-check-input" 
-                     id="whole-words" 
+              <input type="checkbox"
+                     class="form-check-input"
+                     id="whole-words"
                      name="whole-words"
                      hx-post="{% url 'search' %}"
                      hx-trigger="change delay:50ms"
@@ -41,10 +41,10 @@
           <div id="searchResults" class="mt-3">
             <!-- Search results will be loaded here -->
           </div>
-          <div class="modal-footer border-0">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
         </form>
+      </div>
+      <div class="modal-footer border-0">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
