--- a/lexiflux/templates/partials/search_modal.html
+++ b/lexiflux/templates/partials/search_modal.html
@@ -1,5 +1,6 @@
 <div id="searchModal"
      class="modal fade"
+     tabindex="-1"
      aria-hidden="true"
      aria-labelledby="searchModalLabel"
      role="dialog"
